fix: fixed some responsive issues on tablet and mobile devices

--- a/src/styles/layout/_navigation.scss
+++ b/src/styles/layout/_navigation.scss
@@ -20,35 +20,42 @@ $transparent-blue: scale-color(
   display: flex;
   flex-direction: column;
   height: 100%;
-  justify-content: center;
   padding: 3rem;
   width: 100%;
 
   @include from(md) {
     flex-direction: row;
+    justify-content: center;
     padding: 0 variables.$padding-large;
   }
 }
 
 .navbar.active {
-  @include upto(sm) {
-    background-color: $transparent-blue;
-    position: fixed;
-    transition: background-color variables.$transition-duration;
-    z-index: variables.$z-index-navbar;
+  background-color: $transparent-blue;
+  position: fixed;
+  transition: background-color variables.$transition-duration;
+  z-index: variables.$z-index-navbar;
+
+  @include from(md) {
+    background-color: variables.$body-bg;
+    position: relative;
   }
 }
 
 // When the navbar is active, it will show the white logo version and the nav items
 .navbar.active .navbar-logo-mobile {
-  @include upto(sm) {
-    display: block;
+  display: block;
+
+  @include from(md) {
+    display: none;
   }
 }
 
 .navbar.active .navbar-logo-desktop {
-  @include upto(sm) {
-    display: none;
+  display: none;
+
+  @include from(md) {
+    display: block;
   }
 }
 
@@ -150,7 +157,7 @@ $transparent-blue: scale-color(
   color: variables.$white;
   font-size: variables.$font-size-large;
   letter-spacing: 2px;
-  padding: 2rem 0;
+  padding: 1.25rem 0;
   text-align: center;
   text-transform: uppercase;
   width: 100%;
